# user-management-api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
app/: api.py  app.py  config.py  models.py  routes.py  run.py  schemas.py
migrations/versions/: a453e7ffda63_initial_migration.py
tests/: conftest.py  test_models.py  test_routes.py  test_schemas.py
